Sandbox/force-app/main/default/objects/BRiT_Risultati__c/BRiT_Risultati__c.object-meta.xml
<CustomObject>
    <label>BRiT Risultato</label>
    <nameField>
        <displayFormat>BR-{00000000}</displayFormat>
        <label>Nome BRiT Risultato</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BRiT Risultati</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>