Sandbox/force-app/main/default/objects/BRiT_Risultati__c/fields/Benchmark__c.field-meta.xml
<CustomField>
    <fullName>Benchmark__c</fullName>
    <label>Benchmark</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>