Sandbox/force-app/main/default/objects/BRiT_Risultati__c/fields/Cod_KPI__c.field-meta.xml
<CustomField>
    <fullName>Cod_KPI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cod_KPI</label>
    <referenceTo>BRiT_KPI__c</referenceTo>
    <relationshipLabel>Cod_KPI</relationshipLabel>
    <relationshipName>Cod_KPI</relationshipName>
    <type>Lookup</type>
</CustomField>