Sandbox/force-app/main/default/objects/BRiT_Risultati__c/fields/Marchio__c.field-meta.xml
<CustomField>
    <fullName>Marchio__c</fullName>
    <label>Marchio</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lexus</fullName>
            </value>
            <value>
                <fullName>Toyota</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>